--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
     </style>
 
-    <h1><center>Welcome to Tenela's Restaurant</h1></center>
+    <h1><center>Welcome to Bhavani Restaurant</h1></center>
     <br>
 
     <blockquote>--Nothing brings people together like good food--</blockquote>
